Ditch Guava from ModuleDependencySortTest
List.of()/Set.of() are adequate replacements for what we are doing here,
use them instead of Immutable{List,Set}.

Change-Id: Iebf600a8a36c0501c834f2a62d12e9b5588efbc2
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>